--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/BRIJESH RAJPUT/Downloads/commons-fileupload-1.4-src/commons-fileupload-1.4-src"/>
 	<classpathentry kind="lib" path="D:/Eclipse-Java/JSPpractice/src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BRIJESH RAJPUT/Downloads/log4j-1.2.17/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
