--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,11 +7,15 @@
 		    <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
 		    <taglib-location>/WEB-INF/c.tld</taglib-location>
   	</taglib>
-  	<!--  
-	  <taglib>
-			<taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
-			<taglib-location>tld/c-1_0.tld</taglib-location>
-	  </taglib>-->
+  	<filter>
+	  	<filter-name>Validation</filter-name>
+	  	<display-name>Validation</display-name>
+	  	<filter-class>com.User.User_Management_System.Filter.Validation</filter-class>
+	  </filter>
+	  <filter-mapping>
+	  	<filter-name>Validation</filter-name>
+	  	<url-pattern>/UserRegistration</url-pattern>
+	  </filter-mapping>
 		<filter>
 	  	<filter-name>EncryptPwd</filter-name>
 	  	<display-name>EncryptPwd</display-name>
