--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
 		    <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
 		    <taglib-location>/WEB-INF/c.tld</taglib-location>
   	</taglib>
+  	
   	<filter>
 	  	<filter-name>Validation</filter-name>
 	  	<display-name>Validation</display-name>
@@ -21,6 +22,18 @@
 	  	<display-name>EncryptPwd</display-name>
 	  	<filter-class>com.User.User_Management_System.Filter.EncryptPwd</filter-class>
 	  </filter>
+		<filter>
+			<filter-name>Check_UserRole</filter-name>
+			<display-name>Check_UserRole</display-name>
+			<description></description>
+			<filter-class>com.User.User_Management_System.Filter.Check_UserRole</filter-class>
+		</filter>
+		<filter>
+			<filter-name>BackButton_Prevention</filter-name>
+			<display-name>BackButton_Prevention</display-name>
+			<description></description>
+			<filter-class>com.User.User_Management_System.Filter.BackButton_Prevention</filter-class>
+		</filter>
 	  <filter-mapping>
 	  	<filter-name>EncryptPwd</filter-name>
 	  	<url-pattern>/UserRegistration</url-pattern>
@@ -33,12 +46,46 @@
 	  	<filter-name>EncryptPwd</filter-name>
 	  	<url-pattern>/ResetPassword</url-pattern>
 	  </filter-mapping>
-	  <servlet>
-	  	<servlet-name>ValidateServlet</servlet-name>
-	  	<display-name>ValidateServlet</display-name>
-	  	<description></description>
-	  	<servlet-class>com.User.User_Management_System.Controller.ValidateServlet</servlet-class>
-	  </servlet>
+	  <filter-mapping>
+	  	<filter-name>Check_UserRole</filter-name>
+	  	<url-pattern>/AdminWork</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/DeleteUser</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/LogOutServlet</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/RemoveImage</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/AdminWork</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/EditServlet</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/UserData</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/CheckUserExist</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/UserDetails</url-pattern>
+	  </filter-mapping>
+	  <filter-mapping>
+	  	<filter-name>BackButton_Prevention</filter-name>
+	  	<url-pattern>/userDashBoard.jsp</url-pattern>
+	  </filter-mapping>
 	  <servlet>
 	  	<servlet-name>UserRegistration</servlet-name>
 	  	<display-name>UserRegistration</display-name>
@@ -51,12 +98,6 @@
 	  	<description></description>
 	  	<servlet-class>com.User.User_Management_System.Controller.LoginServlet</servlet-class>
 	  </servlet>
-	 <servlet>
-	 	<servlet-name>ShowUserProfile</servlet-name>
-	 	<display-name>ShowUserProfile</display-name>
-	 	<description></description>
-	 	<servlet-class>com.User.User_Management_System.Controller.ShowUserProfile</servlet-class>
-	 </servlet>
 	 <servlet>
 	 	<servlet-name>DeleteUser</servlet-name>
 	 	<display-name>DeleteUser</display-name>
@@ -104,13 +145,7 @@
 	 	<display-name>UserData</display-name>
 	 	<description></description>
 	 	<servlet-class>com.User.User_Management_System.Controller.UserData</servlet-class>
-	 </servlet>
-	 <servlet>
-	 	<servlet-name>servlet</servlet-name>
-	 	<display-name>servlet</display-name>
-	 	<description></description>
-	 	<servlet-class>com.User.User_Management_System.Controller.servlet</servlet-class>
-	 </servlet>
+	 </servlet> 
 	 <servlet>
 	 	<servlet-name>AdminEdit</servlet-name>
 	 	<display-name>AdminEdit</display-name>
@@ -118,21 +153,17 @@
 	 	<servlet-class>com.User.User_Management_System.Controller.AdminEdit</servlet-class>
 	 </servlet>
 	 <servlet>
-	 	<servlet-name>Admin_EditUser</servlet-name>
-	 	<display-name>Admin_EditUser</display-name>
-	 	<description></description>
-	 	<servlet-class>com.User.User_Management_System.Controller.Admin_EditUser</servlet-class>
-	 </servlet>
-	 <servlet>
 	 	<servlet-name>UserDetails</servlet-name>
 	 	<display-name>UserDetails</display-name>
 	 	<description></description>
 	 	<servlet-class>com.User.User_Management_System.Controller.UserDetails</servlet-class>
 	 </servlet>
-	   <servlet-mapping>
-	  	<servlet-name>ValidateServlet</servlet-name>
-	  	<url-pattern>/ValidateServlet</url-pattern>
-	  </servlet-mapping>
+	 <servlet>
+	 	<servlet-name>CheckUserExist</servlet-name>
+	 	<display-name>CheckUserExist</display-name>
+	 	<description></description>
+	 	<servlet-class>com.User.User_Management_System.Controller.CheckUserExist</servlet-class>
+	 </servlet>
 	   <servlet-mapping>
 	   	<servlet-name>UserRegistration</servlet-name>
 	   	<url-pattern>/UserRegistration</url-pattern>
@@ -140,10 +171,6 @@
 	   <servlet-mapping>
 	   	<servlet-name>LoginServlet</servlet-name>
 	   	<url-pattern>/LoginServlet</url-pattern>
-	   </servlet-mapping>
-	   <servlet-mapping>
-	   	<servlet-name>ShowUserProfile</servlet-name>
-	   	<url-pattern>/ShowUserProfile</url-pattern>
 	   </servlet-mapping>
 	   <servlet-mapping>
 	   	<servlet-name>DeleteUser</servlet-name>
@@ -178,19 +205,15 @@
 	   	<url-pattern>/UserData</url-pattern>
 	   </servlet-mapping>
 	   <servlet-mapping>
-	   	<servlet-name>servlet</servlet-name>
-	   	<url-pattern>/servlet</url-pattern>
-	   </servlet-mapping>
-	   <servlet-mapping>
 	   	<servlet-name>AdminEdit</servlet-name>
 	   	<url-pattern>/AdminEdit</url-pattern>
 	   </servlet-mapping>
 	   <servlet-mapping>
-	   	<servlet-name>Admin_EditUser</servlet-name>
-	   	<url-pattern>/Admin_EditUser</url-pattern>
-	   </servlet-mapping>
-	   <servlet-mapping>
 	   	<servlet-name>UserDetails</servlet-name>
 	   	<url-pattern>/UserDetails</url-pattern>
+	   </servlet-mapping>
+	   <servlet-mapping>
+	   	<servlet-name>CheckUserExist</servlet-name>
+	   	<url-pattern>/CheckUserExist</url-pattern>
 	   </servlet-mapping>
 </web-app>
